# agentseceval

./: .env.example  .gitignore  README.md  pipeline.py  pyproject.toml
agentseceval/: __init__.py
agentseceval/experiments/: orchestrator.py
agentseceval/experiments/configs/: baseline.yaml  baseline_mistral.yaml  baseline_phi4mini.yaml  baseline_qwen25.yaml  baseline_qwen3.yaml  baseline_qwen3_rerun.yaml  milestone1.yaml  milestone2_gvisor.yaml
agentseceval/harness/: runner.py
agentseceval/harness/agent/: base.py  ollama_agent.py
agentseceval/harness/logging/: collector.py
agentseceval/harness/metrics/: asr.py  breach.py  fidelity.py  leakage.py
agentseceval/harness/tools/: base.py  email_send.py  filesystem.py  http_request.py
analysis/: compute_metrics.py  generate_figures.py  generate_tables.py  ieee_style.py
analysis/notebooks/: exploration.ipynb
dataset/: README.md  build_dataset.py  schema.yaml  validate.py
dataset/canary/: config.yaml  deployment_manifest.txt  report.txt
dataset/release/: agentseceval.parquet  dataset_card.md
dataset/scenarios/exfiltration/: C1_exfiltration_01.yaml
docs/: exfil_server.py  reproducibility.md
isolation/docker/: Dockerfile  README.md  entrypoint.sh
isolation/gvisor/: README.md  runsc-config.toml
isolation/none/: README.md
isolation/wasm/: README.md
results/: latency_summary.csv  metrics_summary.csv  table_baseline.md  table_fidelity.md  table_isolation.md  table_rq1.md  table_rq2.md
tests/: test_metrics.py  test_schema_validation.py  test_tools.py
(+7 files in other folders)
